<resources>
    <string name="app_name" translatable="false">NewPetFriend</string>

    <!-- Splash screen -->
    <string name="nome_splash" translatable="false">New Pet Friend</string>
    <string name="imagem_logotipo">cao e gato</string>

    <!-- Activity_Login -->
    <string name="email">Email:</string>
    <string name="palavra_passe">Palavra-passe:</string>
    <string name="exemplo_email">ZeNinguem@mail.com</string>
    <string name="registar">Registar</string>
    <string name="iniciar_sessao">Iniciar sessão</string>
    <string name="efetue_login_conta_criada">Efetue o login com a conta criada</string>

    <string name="erro_email_e_password_vazio">ERRO: Nenhum dos campos está preenchido</string>
    <string name="erro_email_vazio">ERRO: Email não foi introduzido</string>
    <string name="erro_password_vazia">ERRO: Palavra-passe não foi introduzida</string>
    <string name="erro_utilizador_nao_encontrado">ERRO: Email ou palavra-passe estão incorretas</string>
    <string name="erro_utilizador_ja_existe">ERRO: Utilizador já existe</string>
    <string name="erro_email_invalido">ERRO: Email inserido não é válido</string>

    <!-- Outros -->
    <string name="Lorem_Ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam elementum orci sed turpis dapibus auctor. Aenean malesuada nunc at efficitur dictum. Maecenas a quam non mi lobortis condimentum. Phasellus in feugiat lectus, eu rutrum lectus. Phasellus purus nulla, laoreet eget enim non, interdum molestie urna. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam aliquam metus erat, vel eleifend lorem aliquet quis. Donec placerat accumsan neque, eget feugiat ex tempor vel.</string>
    <string name="imagelogotipo">ImageLogotipo</string>
    <string name="imageanimal">ImageAnimal</string>

    <!--Mapa -->
    <string name="permission_rationale_location">Estas permissões são necessárias para que a aplicação funcione correctamente.</string>
    <string name="location_permission_denied">Estas permissões são necessárias para que a aplicação funcione correctamente. Por favor tente de novo e dê as permissões necessárias à aplicação. Se as permissões foram negadas de forma definitiva poderá alterar essa decisão manualmente nas definições do seu dispositivo.</string>
    <string name="permission_required_toast">Permissão de localização é necessária.</string>

    <!-- Main Activity -->
    <string name="intro">NewPetFriend visa a procurar uma família para os nossos animais, dando uma nova oportunidade de serem felizes</string>
    <string name="caes">Cães</string>
    <string name="gatos">Gatos</string>
    <string name="ambos">Ambos</string>
    <string name="imageAmbos" translatable="false">ambos</string>
    <string name="imagegato" translatable="false">imageGato</string>
    <string name="title_activity_maps_new_pet_friend" translatable="false">MapsNewPetFriend</string>
    <string name="localizacao_de_instituicoes">Localização de Instituições</string>

    <!-- Admin Activity -->
    <string name="erro_campos_vazios">ERRO: Ainda falta informação por adicionar</string>
    <string name="erro_inesperado">ERRO: Ocorreu um erro inesperado</string>

    <!-- BD -->
    <string name="idade">Idade</string>
    <string name="nome">Nome</string>
    <string name="vacinado">Vacinado</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="adicionar">Adicionar</string>
    <string name="delete">Apagar</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="animal_list">Lista animais</string>

    <string name="field_name">Nome:</string>
    <string name="cao">Cão</string>
    <string name="gato">Gato</string>
    <string name="macho">Macho</string>
    <string name="instituicao">Instituição</string>
    <string name="raca">Raça</string>
    <string name="femea">Fêmea</string>
    <string name="castrado">Castrado</string>
    <string name="administrador">Administrador</string>

    <string name="erro_idade_menor_que_zero">ERRO: Idade não pode ser menor que zero!</string>

    <string name="animal_atualizado">Animal atualizado</string>
    <string name="animal_inserido">Animal inserido</string>
    <string name="animal_apagado">Animal apagado</string>
    <string name="animal_encontrado">Animal encontrado</string>
    <string name="animal_nao_encontrado">Animal não encontrado</string>
    <string name="debug_admin" translatable="false">admin@ips.pt</string>
    <string name="debug_admin_password" translatable="false">admin</string>

    <!-- item_animal_recycler -->
    <string name="smaller_placeholder_text" translatable="false">ph_text</string>
    <string name="animal">Animal:</string>

    <!-- activity_pagina_individual -->
    <string name="nomeIndividual">Nome:</string>
    <string name="idadeIndividual">Idade:</string>
    <string name="placeholder_text" translatable="false">placeholder_text</string>
    <string name="generoIndividual">Género:</string>
    <string name="racaIndividual">Raça:</string>
    <string name="vacinadoIndividual">Vacinado:</string>
    <string name="castradoIndividual">Castrado:</string>
    <string name="instituicaoIndividual">Instituição:</string>

</resources>

    <!-- NewPetFriend visa a procurar uma nova familia para os nossos animais! Dê uma outra oportunidade de serem ambos felizes. -->
