<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gato"
    tools:context=".PaginaIndividualActivity">

    <ImageView
        android:id="@+id/imageLogotipo"
        android:layout_width="119dp"
        android:layout_height="85dp"
        android:layout_marginStart="146dp"
        android:layout_marginEnd="146dp"
        android:contentDescription="@string/imagelogotipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logotipo"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageAnimal"
        android:layout_width="370dp"
        android:layout_height="166dp"
        android:layout_marginBottom="436dp"
        android:contentDescription="@string/imageanimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textInfoAnimal"
        android:layout_width="369dp"
        android:layout_height="292dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="104dp"
        android:text="@string/Lorem_Ipsum"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>